--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
@@ -38,10 +38,9 @@
             <label>ปีงบประมาณ</label>
           </div>
           <div class="four wide field ">
-            <select class="ui search dropdown" name="buggetYear" id="buggetYear" [(ngModel)]="buggetYear" (change)="changeBuggetYear($evnet)">
-              <option value="2561">2561</option>
-              <option value="2560">2560</option>
-              <option value="2559">2559</option>
+            <select class="ui search dropdown" name="budgetYear" id="budgetYear" [(ngModel)]="budgetYear" (change)="changebudgetYear($evnet)">
+              <option *ngFor="let data of yearList" value="{{data.value}}">{{data.description}}</option>
+
             </select>
           </div>
           <div class="two wide field ">
@@ -67,7 +66,7 @@
             <i class="refresh icon"></i>
             ล้างข้อมูล
           </button>
-          <button class="ui mini primary button" (click)="createBuggetYear()">
+          <button class="ui mini primary button" (click)="createBudgetYear()">
             <i class="add icon"></i>
             สร้าง
           </button>
