In09213 add data table back

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-3/int09-2-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-3/int09-2-1-3.component.html
@@ -36,31 +36,32 @@
         </div>
         <div class="ui grid">      
             <div class="three wide column right aligned"><label>ตำแหน่ง</label></div>
-            <div class="three wide column"><input type="text" id="position"></div>           
-        </div>    
-        <div class="ui grid">                
-                <div class="two wide column right aligned"><label>ประเภท</label></div>
-                <div class="three wide column">
-                    <select class="ui dropdown"  id="type" (change)="subTypeDropdownOnChange($event)">
-                        <option value="">เลือกประเภท</option>
-                        <option *ngFor="let data of typeDropdown" value="{{data.value}}">{{data.label}}</option>
-                    </select>             
-                </div>
-                <div class="one wide column right aligned"><label>subtype</label></div>
-                <div class="three wide column">
-                    <select class="ui dropdown"  id="subtype" (change)="levelDropdownOnChange($event)">
-                        <option value="">เลือกระดับ</option>
-                        <option *ngFor="let data of subtypeDropdown" value="{{data.value}}">{{data.label}}</option> 
-                    </select>           
-                </div>   
-                <div class="one wide column right aligned"><label>ระดับ</label></div>
-                <div class="three wide column">
-                    <select class="ui dropdown"  id="level">
-                        <option value="">เลือกระดับ</option>
-                        <option *ngFor="let data of levelDropdown" value="{{data.value}}">{{data.label}}</option> 
-                    </select>           
-                </div>     
-        </div>  
+            <div class="three wide column"><input type="text" id="position"></div>      
+        </div>
+        <div class="ui grid">
+            <div class="three wide column right aligned"><label>กรณี</label></div>
+            <div class="three wide column">
+                <select class="ui dropdown"  id="case" (change)="caseDropdownChange($event)">
+                    <option value="">เลือก</option>
+                    <option value="306">ปกติ</option>
+                    <option value="324">เหมาจ่าย</option>                                        
+                </select>             
+            </div>  
+            <div class="two wide column right aligned"><label>ประเภท</label></div>
+            <div class="three wide column">
+                <select class="ui dropdown"  id="type" (change)="typeDropdownChange($event)">
+                    <option value="">เลือก</option>
+                    <option *ngFor="let data of typeDropdown" value="{{data.value}}">{{data.label}}</option>
+                </select>             
+            </div>                      
+            <div class="one wide column right aligned"><label>ระดับ</label></div>
+            <div class="three wide column">
+                <select class="ui dropdown"  id="level">
+                    <option value="">เลือกระดับ</option>
+                    <option *ngFor="let data of levelDropdown" value="{{data.value}}">{{data.label}}</option> 
+                </select>           
+            </div>          
+        </div>
         <div class="ui grid">
             <div class="three wide column ui right aligned"><label>วันขออนุญาต</label></div>
             <div class="three wide column">
@@ -124,21 +125,19 @@
         </div>
         <div class="ui grid">
             <div class="three wide column ui right aligned"><label>จำนวนวันเข้าพัก</label></div>
-            <div class="two wide column"><input id="numberLive" type="text"></div>
-            <div class="two wide column right aligned"><label>ประเภทการเบิก</label></div>
-            <div class="two wide column">
-                <select class="ui dropdown"   id="typeWithdrawal" (change)="typeRoom()">                    
+            <div class="two wide column"><input id="numberLive" type="number"></div>
+
+            <div id="lebeltypeWithdrawal" class="two wide column right aligned"><label>ประเภทการเบิก</label></div>
+            <div id="selecttypeWithdrawal" class="two wide column">
+                <select class="ui dropdown"  id="typeWithdrawal" >                    
                     <option value="">เลือก </option>
-                    <option value="1">ปกติ </option>
-                    <option value="2">เหมาจ่าย</option>
-                    <option value="3">อบรมประเภท ก</option>
-                    <option value="4">อบรมประเภท ข</option>
+                    <option  *ngFor="let data of typeWithdrawal" value="{{data.value}}">{{data.label}} </option>
                 </select>
                 </div>
         
             <div id="typeRoomLabel"   class="three wide column right aligned"><label>ประเภทห้องพัก</label></div>
             <div id="typeRoomValue"  class="three wide column">            
-                    <select class="ui dropdown"  id="typeRoom" >
+                    <select class="ui dropdown"   id="typeRoom" >
                         <option value="">เลือก</option>
                         <option value="1">ห้องเดี่ยว </option>
                         <option value="2">ห้องคู่</option>
@@ -183,7 +182,7 @@
                     
                   </tr>
                   <tr>
-                    <th style="text-align: center !important">วัน</th>
+                    <th style="text-align: center !important;    border-left: 1px solid rgba(34,36,38,.1);">วัน</th>
                     <th style="text-align: center !important">จำนวนเงิน</th>
                     <th style="text-align: center !important">วัน</th>
                     <th style="text-align: center !important">จำนวนเงิน</th>
