--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-2/int08-2-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-2/int08-2-2.component.html
@@ -12,7 +12,13 @@
                         <label>ปัจจัยเสี่ยง</label>
                       </div>
                       <div class="four wide field ">
-                        <input type="text" placeholder="ปัจจัยเสี่ยง" class="custom" >
+                        <input type="text" placeholder="ปัจจัยเสี่ยง" maxlength="100" name="riskAssInfHdrName" id="riskAssInfHdrName" [(ngModel)]="riskAssInfHdrName" >
+                      </div>
+                      <div class="two wide field">
+                        <label>ปีงบประมาณ</label>
+                      </div>
+                      <div class="four wide field ">
+                        <input type="text" placeholder="ปีงบประมาณ" class="custom" name="buggetYear" id="buggetYear" [(ngModel)]="buggetYear">
                       </div>
                       <div class="four wide field ">
                         <button class="ui mini primary button" (click)="addRiskAssInfHdr()" >
@@ -27,6 +33,7 @@
                       <tr>
                         <th>ลำดับ</th>
                         <th>ปัจจัยเสี่ยง</th>
+                        <th>ปีงบประมาณ</th>
                         <th>วันที่สร้าง</th>
                         <th>ผู้สร้าง</th>
                         <th>สถานะการใช้งาน</th>
@@ -34,6 +41,21 @@
                       </tr>
                     </thead>
                   </table>
+
+                  <div class="inline fields"></div>
+                  <div class="inline fields ">
+                    <div class="sixteen wide field ">
+                      <div class="six wide field "></div>
+                      <button class="ui mini primary button" >
+                        <i class="save icon"></i>
+                        บันทึก
+                      </button>
+                      <button class="ui mini primary button" >
+                        กำหนดเงื่อนไขปัจจัยเสี่ยงรวม
+                      </button>
+                    </div>
+          
+                  </div>
 
               </div>
           </div>
