--- a/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-1/epa01-1-1/epa01-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-1/epa01-1-1/epa01-1-1.component.html
@@ -11,8 +11,9 @@
       <div class="ui grid center aligned">
         <div class="sixteen wide column">
           <h3>เชื่อมโยงข้อมูลใบขน (ภส.05-01) </h3>
-        </div>
+        </div>      
       </div>
+      <hr>
       <br>
       <br>
 
@@ -51,6 +52,7 @@
           <div class="five wide field ">
             <input type="text" placeholder="" value="1908499938043">
           </div>
+          
         </div>
 
         <div class="inline fields">
@@ -73,6 +75,7 @@
 
           </div>
         </div>
+        <hr>
 
         <div class="inline fields">
           <div class="four  wide field ">
@@ -88,6 +91,13 @@
           <div class="five wide field ">
             <input type="text" placeholder="" value="คลังสินค้า Honda ประเทศไทย">
           </div>
+          <div class="two wide field ">
+            <label>คลังสินค้าทัณฑ์บน
+            </label>
+          </div>
+          <div class="five wide field ">
+            <input type="text" placeholder="" value="1123123141">
+          </div>
         </div>
 
         <div class="inline fields">
@@ -99,12 +109,13 @@
             <input type="text" placeholder="" value="190394893331">
           </div>
           <div class="two wide field ">
-            <label>คลังสินค้าทัณฑ์บน
+            <label>เพื่อ
             </label>
           </div>
           <div class="five wide field ">
-            <input type="text" placeholder="" value="1123123141">
+            <input type="text" placeholder="" value="">
           </div>
+         
         </div>
 
 
@@ -112,19 +123,12 @@
           <div class="four  wide field ">
             <label>สถานที่เก็บสินค้า </label>
           </div>
-          <div class="five wide field ">
+          <div class="twelve wide field ">
             <input type="text" placeholder="" value="350 แขวง ถนน พญาไท เขต ราชเทวี กรุงเทพฯ 10400">
           </div>
         </div>
 
-        <div class="inline fields">
-          <div class="four  wide field ">
-            <label>เพื่อ</label>
-          </div>
-          <div class="five wide field ">
-            <input type="text" placeholder="" value="ส่งออก">
-          </div>
-        </div>
+     
 
         <div class="inline fields">
           <div class="four  wide field ">
