--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-2/int08-2-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-2/int08-2-2.component.html
@@ -18,7 +18,7 @@
                         <label>ปีงบประมาณ</label>
                       </div>
                       <div class="four wide field ">
-                        <input type="text" placeholder="ปีงบประมาณ" class="custom" name="buggetYear" id="buggetYear" [(ngModel)]="buggetYear">
+                        <input type="text" placeholder="ปีงบประมาณ" class="custom" name="budgetYear" id="budgetYear" [(ngModel)]="budgetYear">
                       </div>
                       <div class="four wide field ">
                         <button class="ui mini primary button" (click)="addRiskAssInfHdr()" >
